; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_extract_ld_offset.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_extract_ld_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arc_operand = type { i32 }
%struct.arc_operand_value = type { i32 }

@ARC_OPERAND_SIGNED = common dso_local global i32 0, align 4
@OP_SHIMM = common dso_local global i32 0, align 4
@ls_operand = common dso_local global i32* null, align 8
@LS_OFFSET = common dso_local global i64 0, align 8
@arc_operands = common dso_local global i32* null, align 8
@arc_operand_map = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.arc_operand*, i32, %struct.arc_operand_value**, i32*)* @extract_ld_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @extract_ld_offset(i32* %0, %struct.arc_operand* %1, i32 %2, %struct.arc_operand_value** %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.arc_operand*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.arc_operand_value**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.arc_operand* %1, %struct.arc_operand** %8, align 8
  store i32 %2, i32* %9, align 4
  store %struct.arc_operand_value** %3, %struct.arc_operand_value*** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @I(i32 -1)
  %18 = and i32 %16, %17
  store i32 %18, i32* %12, align 4
  store i32 0, i32* %13, align 4
  %19 = load i32, i32* %12, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %50

21:                                               ; preds = %5
  %22 = load i32*, i32** %7, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  %24 = load i32, i32* %23, align 4
  %25 = and i32 %24, 511
  store i32 %25, i32* %13, align 4
  %26 = load %struct.arc_operand*, %struct.arc_operand** %8, align 8
  %27 = getelementptr inbounds %struct.arc_operand, %struct.arc_operand* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @ARC_OPERAND_SIGNED, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %39

32:                                               ; preds = %21
  %33 = load i32, i32* %13, align 4
  %34 = and i32 %33, 256
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load i32, i32* %13, align 4
  %38 = sub nsw i32 %37, 512
  store i32 %38, i32* %13, align 4
  br label %39

39:                                               ; preds = %36, %32, %21
  %40 = load i32, i32* %13, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %47

42:                                               ; preds = %39
  %43 = load i32, i32* @OP_SHIMM, align 4
  %44 = load i32*, i32** @ls_operand, align 8
  %45 = load i64, i64* @LS_OFFSET, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  store i32 %43, i32* %46, align 4
  br label %47

47:                                               ; preds = %42, %39
  %48 = load i32, i32* %13, align 4
  %49 = sext i32 %48 to i64
  store i64 %49, i64* %6, align 8
  br label %61

50:                                               ; preds = %5
  %51 = load i32*, i32** %7, align 8
  %52 = load i32*, i32** @arc_operands, align 8
  %53 = load i64*, i64** @arc_operand_map, align 8
  %54 = getelementptr inbounds i64, i64* %53, i64 99
  %55 = load i64, i64* %54, align 8
  %56 = getelementptr inbounds i32, i32* %52, i64 %55
  %57 = load i32, i32* %9, align 4
  %58 = load %struct.arc_operand_value**, %struct.arc_operand_value*** %10, align 8
  %59 = load i32*, i32** %11, align 8
  %60 = call i64 @extract_reg(i32* %51, i32* %56, i32 %57, %struct.arc_operand_value** %58, i32* %59)
  store i64 %60, i64* %6, align 8
  br label %61

61:                                               ; preds = %50, %47
  %62 = load i64, i64* %6, align 8
  ret i64 %62
}

declare dso_local i32 @I(i32) #1

declare dso_local i64 @extract_reg(i32*, i32*, i32, %struct.arc_operand_value**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
